# EnterpriseOps-Gym-2

./: .gitignore  README.md  pyproject.toml
data/itsm/: db.json  fk_spec.json  policy.md  single_tenant_db.json  tasks.json
examples/: run_eval.py
src/eops_gym/: __init__.py  cli.py  config.py  run.py
src/eops_gym/agent/: llm_agent.py
src/eops_gym/data_model/: message.py  tasks.py
src/eops_gym/domains/itsm/: data_model.py  environment.py  tools.py
src/eops_gym/domains/itsm/tools/: _base.py  change_request_mappings.py  configuration_items.py  groups.py  incident_affected_cis.py  incident_slas.py  knowledge.py  locations.py  notifications.py  problems.py  services.py  sla_definitions.py  users.py
src/eops_gym/environment/: db.py  delta.py  environment.py  tool.py  toolkit.py
src/eops_gym/evaluator/: evaluator.py  evaluator_env.py  evaluator_nl.py  text_match_strategy.py
src/eops_gym/gym/: gym_agent.py
src/eops_gym/orchestrator/: orchestrator.py
src/eops_gym/user/: base.py  user_simulator.py
src/eops_gym/utils/: __init__.py  clock.py  hash_utils.py  io_utils.py  llm_utils.py
tests/: test_db_fuzzy_match.py  test_framework.py  test_gym.py  test_incident_sla_clock.py
