[project]
name = "eops-gym"
version = "0.1.0"
description = "EnterpriseOps Gym 2 — a tau2-style benchmark for enterprise operations agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "litellm>=1.65",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-mock"]
hf = ["datasets>=2.0"]

[project.scripts]
eops = "eops_gym.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eops_gym"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
